--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -538,11 +538,11 @@ Nun entscheidest du, welche plentymarkets Datenfelder mit dem Katalog exportiert
 
 Optional hast du auch komplexere Exportmöglichkeiten:
 
-* Ein anderes Datenfeld exportieren, wenn das erste Datenfeld leer ist (*Ausweich-Datenfelder hinzufügen*)
+* <<#optional-fallback, Ein anderes Datenfeld exportieren, wenn das erste Datenfeld leer ist (Ausweich-Datenfelder hinzufügen)>>
 * Für jeden Datensatz denselben Wert exportieren (icon:pencil[role="black"]) *Eigener Wert*)
 * Mehrere Datenfelder miteinander kombinieren
-* Die Reihenfolge der Datenfelder ändern
 * Zahlenwerte beim Export neu berechnen (icon:calculate[set=material] *Formel*)
+* Die Reihenfolge der Datenfelder ändern
 
 Diese optionalen Exportmöglichkeiten werden unterhalb der Anleitung genauer erklärt.
 
@@ -567,6 +567,7 @@ Datenfelder zum Export hinzufügen:
 → Die Datenfelder werden mit diesem Katalog exportiert. +
 *_Tipp:_* In den Info-Boxen unter dieser Beschreibung findest du Informationen zu komplexeren Exportmöglichkeiten.
 
+[#optional-fallback]
 [.collapseBox]
 ._Optional:_ Ausweich-Datenfelder hinzufügen
 --
