--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -539,10 +539,10 @@ Nun entscheidest du, welche plentymarkets Datenfelder mit dem Katalog exportiert
 Optional hast du auch komplexere Exportmöglichkeiten:
 
 * <<#optional-fallback, Ein anderes Datenfeld exportieren, wenn das erste Datenfeld leer ist (Ausweich-Datenfelder hinzufügen)>>
-* Für jeden Datensatz denselben Wert exportieren (icon:pencil[role="black"]) *Eigener Wert*)
-* Mehrere Datenfelder miteinander kombinieren
-* Zahlenwerte beim Export neu berechnen (icon:calculate[set=material] *Formel*)
-* Die Reihenfolge der Datenfelder ändern
+* <<#optional-own-value, Für jeden Datensatz denselben Wert exportieren (icon:pencil[role="black"]) *Eigener Wert*)>>
+* <<#optional-combine, Mehrere Datenfelder miteinander kombinieren>>
+* <<#optional-recalculate, Zahlenwerte beim Export neu berechnen (icon:calculate[set=material] *Formel*)>>
+* <<#optional-change-order, Die Reihenfolge der Datenfelder ändern>>
 
 Diese optionalen Exportmöglichkeiten werden unterhalb der Anleitung genauer erklärt.
 
@@ -569,7 +569,7 @@ Datenfelder zum Export hinzufügen:
 
 [#optional-fallback]
 [.collapseBox]
-._Optional:_ Ausweich-Datenfelder hinzufügen
+._Optional:_ Ein anderes Datenfeld exportieren, wenn das erste Datenfeld leer ist (Ausweich-Datenfelder hinzufügen)
 --
 
 Mit Ausweich-Datenfeldern legst du fest:
@@ -603,6 +603,7 @@ Im folgenden GIF ist das Standardformat *Hersteller* zu sehen. Das Datenfeld *He
 image::daten:gif-standardformate-ausweich.gif[width=600]
 --
 
+[#optional-own-value]
 [.collapseBox]
 ._Optional:_ Für jeden Datensatz denselben Wert exportieren (*Eigener Wert*)
 --
@@ -635,6 +636,7 @@ image::daten:ergebnis-export-companyname.png[]
 
 --
 
+[#optional-combine]
 [.collapseBox]
 ._Optional:_ Mehrere Datenfelder miteinander kombinieren
 --
@@ -675,18 +677,7 @@ image::daten:gif-standardformate-combination.gif[width=600]
 image::daten:ergebnis-export-street.png[]
 --
 
-[.collapseBox]
-._Optional:_ Reihenfolge der Datenfelder ändern
---
-
-In der Exportdatei werden die Datenfelder in derselben Reihenfolge angezeigt wie in der Katalogliste. Die erste Spalte einer CSV-Datei enthält also die Daten des Datenfelds, das ganz oben im Katalog steht und so weiter.
-
-Um die Reihenfolge der Daten in der Exportdatei anpassen, kannst du entweder einzelne Datenfelder oder ganze Zeilen verschieben:
-
-* Um ein einzelnes Datenfeld zu verschieben: Zeige mit der Maus auf das Datenfeld und ziehe es mit gedrückter Maustaste an die gewünschte Postion.
-* Um eine ganze Zeile zu verschieben: Klicke auf das Symbol (icon:drag_indicator[set=material]) am linken Rand und ziehe die Zeile mit gedrückter Maustaste an die neue Position.
---
-
+[#optional-recalculate]
 [.collapseBox]
 ._Optional:_ Zahlenwerte beim Export neu berechnen (*Formel*)
 --
@@ -721,6 +712,19 @@ Zahlenwerte beim Export neu berechnen:
 → Die eingefügte Formel wird in der Ansicht angezeigt. +
 *_Tipp:_* Wenn für das Format eine Vorschau verfügbar ist, prüfe das Ergebnis über die Vorschaufunktion (icon:preview[set=material]). +
 → Die Berechnung wird beim nächsten Export durchgeführt.
+--
+
+[#optional-change-order]
+[.collapseBox]
+._Optional:_ Die Reihenfolge der Datenfelder ändern
+--
+
+In der Exportdatei werden die Datenfelder in derselben Reihenfolge angezeigt wie in der Katalogliste. Die erste Spalte einer CSV-Datei enthält also die Daten des Datenfelds, das ganz oben im Katalog steht und so weiter.
+
+Um die Reihenfolge der Daten in der Exportdatei anpassen, kannst du entweder einzelne Datenfelder oder ganze Zeilen verschieben:
+
+* Um ein einzelnes Datenfeld zu verschieben: Zeige mit der Maus auf das Datenfeld und ziehe es mit gedrückter Maustaste an die gewünschte Postion.
+* Um eine ganze Zeile zu verschieben: Klicke auf das Symbol (icon:drag_indicator[set=material]) am linken Rand und ziehe die Zeile mit gedrückter Maustaste an die neue Position.
 --
 
 [#delete-fields]
