--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -544,10 +544,8 @@ Optional hast du auch komplexere Exportmöglichkeiten:
 * <<#optional-recalculate, Zahlenwerte beim Export neu berechnen (icon:calculate[set=material] *Formel*)>>
 * <<#optional-change-order, Die Reihenfolge der Datenfelder ändern>>
 
-Diese optionalen Exportmöglichkeiten werden unterhalb der Anleitung genauer erklärt.
-
 [.instruction]
-Datenfelder zum Export hinzufügen:
+Datenfeld zum Export hinzufügen:
 
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
@@ -561,7 +559,7 @@ Datenfelder zum Export hinzufügen:
 . Prüfe, ob der Export Key deine Anforderungen erfüllt. +
   ** *_Was ist ein Export Key?_* +
   Der "Export Key" ist der Name der Spaltenüberschrift, der in deiner Exportdatei erscheinen wird. Jeder "Export Key" darf in diesem Katalog nur einmal vorkommen. Export Keys dürfen außerdem keine Leerzeichen enthalten. +
-  *_Wichtig:_* Wenn mehrere Datenfelder denselben Export Key haben, wird nur eines dieser Datenfelder exportiert.
+  *_Wichtig:_* Wenn mehrere Datenfelder denselben Export Key haben, wird nur eines der Datenfelder exportiert.
 . Füge alle Datenfelder hinzu, die du exportieren möchtest.
 . *Speichere* (icon:save[set=material]) die Einstellungen. +
 → Die Datenfelder werden mit diesem Katalog exportiert. +
@@ -723,8 +721,10 @@ In der Exportdatei werden die Datenfelder in derselben Reihenfolge angezeigt wie
 
 Um die Reihenfolge der Daten in der Exportdatei anpassen, kannst du entweder einzelne Datenfelder oder ganze Zeilen verschieben:
 
-* Um ein einzelnes Datenfeld zu verschieben: Zeige mit der Maus auf das Datenfeld und ziehe es mit gedrückter Maustaste an die gewünschte Postion.
-* Um eine ganze Zeile zu verschieben: Klicke auf das Symbol (icon:drag_indicator[set=material]) am linken Rand und ziehe die Zeile mit gedrückter Maustaste an die neue Position.
+* Um ein einzelnes Datenfeld zu verschieben:
+  ** Zeige mit der Maus auf das Datenfeld und ziehe es mit gedrückter Maustaste an die gewünschte Postion.
+* Um eine ganze Zeile zu verschieben:
+  ** Klicke auf das Symbol (icon:drag_indicator[set=material]) am linken Rand und ziehe die Zeile mit gedrückter Maustaste an die neue Position.
 --
 
 [#delete-fields]
