add translation for printer.adoc / add to do

--- a/docs/de-de/modules/automatisierung/pages/drucker.adoc
+++ b/docs/de-de/modules/automatisierung/pages/drucker.adoc
@@ -163,6 +163,9 @@ Die Druckfunktionen sind mit üblichen Etikettendruckern kompatibel und wurden f
 [#60]
 === Zebra GC420d auf deinem Rechner installieren
 
+
+//TODO: Dieses Druckermodell wird nicht mehr produziert, der Support läuft im März 2023 aus. Kapitel dann entweder entfernen oder, wenn Zeit ist, ein aktuelleres Beispiel beschreiben.
+
 Gehe wie unten beschrieben vor, um das Druckermodell Zebra GC420d unter den Betriebssystemen Windows und Mac OSX zu installieren.
 
 [.instruction]
