--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -155,7 +155,7 @@ Füge zuerst den Filter *Auftragslager* hinzu und wähle ein Lager aus der Dropd
 | *Packstation*
 |Wähle, ob nach Aufträgen gefiltert werden soll, die an eine Packstation geliefert werden. +
 *Ja* = Es wird nach Aufträgen mit Packstation gefiltert +
-*Nein* = Es wird nach Aufträgen ohne Packstation gefiltert *
+*Nein* = Es wird nach Aufträgen ohne Packstation gefiltert
 
 | *Rechnungsbetrag*
 |Um Aufträge anhand des Rechnungsbetrags zu filtern, gib einen Wert ein und wähle als Operator das Gleichheitszeichen. Für Rechnungsbetragsbereiche den Betrag eingeben und den passenden Operator wählen. Mit beiden Textfeldern ist die gleichzeitige Anwendung unterschiedlicher Filterbereiche möglich. +
@@ -240,7 +240,7 @@ Damit du die Aufträge, die den Prozess durchlaufen haben, erkennst, weist du di
 |Wähle den gewünschten Status aus der Dropdown-Liste, wenn durch diesen Arbeitsschritt der Status der Aufträge geändert werden soll.
 
 | *Neuer Eigner*
-|Wähle die Person wähle, der die Aufträge durch diesen Arbeitsschritt zugewiesen werden sollen. Wähle optional den *angemeldeten Benutzer* oder *Ohne Änderung*, wenn die Person unverändert bleiben soll.
+|Wähle die Person, der die Aufträge durch diesen Arbeitsschritt zugewiesen werden sollen. Wähle optional den *angemeldeten Benutzer* oder *Ohne Änderung*, wenn die Person unverändert bleiben soll.
 
 | *Neue Markierung*
 |Wähle die gewünschte Markierung aus der Dropdown-Liste, wenn durch diesen Arbeitsschritt die Markierung der Aufträge geändert werden soll.
@@ -536,7 +536,7 @@ Weitere Filter, die du in Verbindung mit dem Arbeitsschritt *Auftragsbearbeitung
 | *Seriennummer*
 |Wähle, ob Auftragspositionen danach gefiltert werden sollen, ob am Artikel eine xref:artikel:seriennummern.adoc#[Seriennummer] hinterlegt ist. +
 *Ja* = Es wird nach Auftragspositionen mit Seriennummer gefiltert +
-*Nein* = Es wird nach Auftragspositionen ohne Seriennummern gefiltert *
+*Nein* = Es wird nach Auftragspositionen ohne Seriennummern gefiltert
 
 |====
 
