add link to sample process

--- a/docs/de-de/modules/videos/pages/automatisierte-retourenanlge-prozessindividualisierung.adoc
+++ b/docs/de-de/modules/videos/pages/automatisierte-retourenanlge-prozessindividualisierung.adoc
@@ -7,4 +7,7 @@ include::./automatisierte-retourenanlage.adoc[tag=einleitung]
 
 video::243261941[vimeo, start=92]
 
+Datei zu diesem Video:
+link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Automatic-Returns_2017_11_17_08_.plentyprocess[Automatic Returns]
+
 include::./automatisierte-retourenanlage.adoc[tag=transkript]
