--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -16,6 +16,12 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 |====
 |Area/function |End of software maintenance |End of provisioningfootnote:[Date from which the function is no longer available] |Further information |Announcement date
 
+|*FTP server*
+|??-Jul-2022
+|??-Jul-2022
+|link:https://forum.plentymarkets.com/t/ftp-end-of-live-ankuendigung/675956[Link zum Forum^]
+|20-Apr-2022
+
 | *plentymarkets logo (Start) » Boards* menu
 |13-Apr-2022
 |starting on 13-April-2022 (successive removal)
