fix: link label

--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -19,7 +19,7 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 |*FTP server*
 |??-Jul-2022
 |??-Jul-2022
-|link:https://forum.plentymarkets.com/t/ftp-end-of-live-ankuendigung/675956[Link zum Forum^]
+|link:https://forum.plentymarkets.com/t/ftp-end-of-live-ankuendigung/675956[Forum link^]
 |20-Apr-2022
 
 | *plentymarkets logo (Start) » Boards* menu
