marketplace format formula - DE

--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -234,3 +234,42 @@ Hier siehst du ein Beispiel dafür, wie du einen eigenen Wert für die Durchmess
 image::maerkte:gif-catalogue-own-value-de.gif[width=600]
 //end::own-mappings-config[]
 --
+
+////
+[.collapseBox]
+.*Zuordnung mit mathematischer Berechnung:* 1 Marktplatz-Datenfeld, plentymarkets Wert wird anhand der Formel beim Export berechnet
+--
+
+//tag::formula-config[]
+Mit mathematischen Berechnungen passt du Werte während des Exports automatisch an.
+
+* Diese Funktion funktioniert nur bei Datenfeldern, die Zahlenwerte enthalten.
+* Diese Funktion ist neu und ist noch nicht für alle Formate verfügbar.
+
+Du legst also fest:
+
+* Ich möchte, dass der Zahlenwert eines plentymarkets Datenfelds beim Export neu berechnet wird. Für die Formeln sind die Grundrechenarten verfügbar.
+
+[.instruction]
+Zahlenwerte beim Export neu berechnen:
+
+. Klicke neben dem Marktplatz-Datenfeld auf *+ Datenfeld hinzufügen*. +
+→ Links wird die Liste der verfügbaren plentymarkets Datenfelder als Gruppen angezeigt.
+. Klicke ganz oben neben *Formel* (icon:calculate[set=material]) auf das Plus. +
+→ Das Datenfeld *Formel* wird in das Feld rechts eingefügt.
+. Klicke in das Datenfeld. +
+→ Das Fenster *Wert ändern* wird angezeigt.
+. Gib einen Zahlenwert ein oder wähle unten rechts ein Datenfeld, um es zur Berechnung hinzuzufügen (icon:add[set=material]). +
+*_Tipp:_* Nutze die Suche, um Datenfelder schnell zu finden.
+. *_Optional:_* Wenn im Datenfeld das Symbol icon:more_vert[set=material] angezeigt wird, wähle die korrekte Zuweisung für das Datenfeld. +
+*_Tipp:_* Eine Zahl zeigt an, wie viele Zuweisungen für das Datenfeld vorgenommen werden müssen.
+    .. Klicke auf das Symbol icon:more_vert[set=material]. +
+    .. Wähle im angezeigten Fenster die gewünschten Zuweisungen aus den Dropdown-Listen.
+    .. *Speichere* die Einstellungen.
+. Gib Zahlen und mathematische Operatoren entweder mit dem angezeigten Taschenrechner oder über die Tastatur ein.
+. *Speichere* die Einstellungen. +
+→ Die eingefügte Formel wird in der Ansicht angezeigt. +
+→ Die Berechnung wird beim nächsten Export durchgeführt.
+//end::formula-config[]
+--
+////
