--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -287,7 +287,7 @@ Die Werte für die Materialtypen müssen mit den von limango erlaubten Werten ü
 * link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/maerkte/assets/limango-material-types.txt[Gültige Werte für Materialtypen^]{nbsp}icon:external-link[]
 
 [.collapseBox]
-.*_Beispiel:_* Materialangaben für einen Damenblazer an limango exportieren
+.*_Beispiel:_* Materialangaben für Damenblazer an limango exportieren
 --
 Als Beispiel wird hier beschrieben, wie du die Materialangaben für einen Blazer für den Export zu limango speicherst.
 
