--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -272,7 +272,7 @@ Jeder Marktplatz strukturiert Artikeldaten anders. Deshalb treten beim Zuordnen 
 
 [[catalogue-otto-market-mappings]]
 .Besonderheiten bei der Katalogzuordnung
-[cols="1,3a"]
+[autowidth.stretch]
 |====
 | Marktplatz-Datenfeld | plentymarkets Datenfeld
 
