--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -674,6 +674,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:april-2022.adoc[Changelogs April 2022]
+** xref:changelog:2022-04-20.adoc[Changelog 20. April 2022]
 ** xref:changelog:2022-04-13.adoc[Changelog 13. April 2022]
 ** xref:changelog:2022-04-06.adoc[Changelog 06. April 2022]
 * xref:changelog:march-2022.adoc[Changelogs März 2022]
