--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -272,7 +272,7 @@ Jeder Marktplatz strukturiert Artikeldaten anders. Deshalb treten beim Zuordnen 
 
 [[catalogue-otto-market-mappings]]
 .Besonderheiten bei der Katalogzuordnung
-[autowidth.stretch]
+[cols="1a,3a"]
 |====
 | Marktplatz-Datenfeld | plentymarkets Datenfeld
 
@@ -291,7 +291,7 @@ Beim Export übersetzt OTTO die Werte in die Kund:innen bekannten Lieferaussagen
 [.collapseBox]
 .Lieferzeiten: Liste und Beispiele
 --
-[autowidth.stretch]
+[cols="1,3"]
 !===
 ! *Lieferzeit*
 ! *OTTO-Lieferaussage*
