Kathrin/otto media assets (#219)
* Update otto-market.adoc

* Update otto-market.adoc

* Update otto-market.adoc

--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -272,7 +272,7 @@ Jeder Marktplatz strukturiert Artikeldaten anders. Deshalb treten beim Zuordnen 
 
 [[catalogue-otto-market-mappings]]
 .Besonderheiten bei der Katalogzuordnung
-[autowidth.stretch]
+[cols="1a,3a"]
 |====
 | Marktplatz-Datenfeld | plentymarkets Datenfeld
 
