--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -173,7 +173,7 @@ Allgemeine Einstellungen vornehmen:
 
 Brauchst du Hilfe oder suchst du Informationen über die aktuell auf deinem Gerät installierte Version von plentyWarehouse? Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) und anschließend auf *Über*, um die Informationen einzusenen.
 
-Tippe zusätzlich auf die Schaltflächen, um zum Handbuch zu gelangen, Support im Forum zu erhalten oder auf rechtliche Angaben zuzugreifen.
+Tippe auf die entsprechenden Links, um zum Handbuch zu gelangen, Support im Forum zu erhalten oder auf rechtliche Angaben zuzugreifen.
 
 //TODO: Screenshot hinzufügen
 
