--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -3,10 +3,9 @@
 :keywords: plentyWarehouse Picklisten, Picklisten App, Picklisten abarbeiten, Pick Liste App, Pick Liste plentyWarehouse
 :id: A6QJGUV
 
-////
-include::_textblocks/hinweis-voraussetzungen.adoc[]
-include::_textblocks/hinweis-offene-beta.adoc[]
-////
+include::partial$hinweis-offene-beta.adoc[]
+include:partial$hinweis-voraussetzungen.adoc[]
+
 
 //TODO: Einleitung
 
@@ -35,7 +34,7 @@ Einstellungen für Picklisten vornehmen:
 . Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links.
 . Tippe unten auf *Einstellungen* (icon:settings[set=material]). +
 → Das Einstellungsmenü öffnet sich.
-. Tippe auf *Picklisten* (image:warenwirtschaft/plentywarehouse/assets/icon_reshelving.png[width=14, height=14]).
+. Tippe auf *Picklisten* (image:warenwirtschaft:icon_pick_list.png[width=14, height=14]).
 . Nimm die Einstellungen für Picklisten vor. Beachte dazu die Erläuterungen in <<table-pw-pick-lists-settings>>.
 
 
@@ -78,9 +77,7 @@ Bevor Picklisten mit plentyWarehouse abgearbeitet werden, muss sichergestellt se
 :right-two: pass:quotes[*Aufträge > Fulfillment > Pickliste > Bearbeiten*]
 :right-three: pass:quotes[*Aufträge > Fulfillment > Pickliste > Löschen*]
 
-////
-include::../../_includes/textblocks/instructions/rechte.adoc[]
-////
+include::_includes:page$rechte.adoc[]
 
 [#300]
 == Artikel picken
