--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -16,7 +16,7 @@ Alle E-Mails, die über plentymarkets versendet werden, basieren auf Vorlagen. V
 Der EmailBuilder ist ein Baukastenmodul, mit dem du deine E-Mail-Vorlagen schnell und einfach per Drag-and-drop erstellen und bearbeiten kannst. Der EmailBuilder besteht aus 2 Ansichten: dem Konfigurationsmanager und dem Editor. Im Konfigurationsmanager erstellst du Ordner, ggf. Unterordner, Vorlagen sowie Vorlagen für deinen Footer und deinen Header. Im Editor befüllst du deine Vorlagen, Header und Footer mit Inhalt. Du kannst zum Beispiel eine Vorlage für eine Rechnung erstellen und diese zukünftig für alle Rechnungen an deine Kund:innen verwenden. +
 Die Header- und Footer-Vorlagen kannst du dann beliebig in deinen E-Mail-Vorlagen verwenden. Header und Footer sind global wirksam; Änderungen, die du am Header und Footer vornimmst, wirken sich demnach auch auf alle bestehenden Vorlagen sowie weitere Vorlagen, die du zukünftig erstellst, aus.
 
-Mit dem Header, dem Footer und den Einstellungen in der Vorlage wie Name, Betreff etc. erstellst du sozusagen das Gerüst deiner E-Mail. Den Inhalt der Vorlage bildest du mit den xref:crm:emailbuilder-testphase.adoc#widget-einfuegen[Widgets] und xref:crm:emailbuilder-testphase.adoc#variablen-emailbuilder[Variablen]. Die Variablen werden dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt. Zum Beispiel wird die Variable `Lieferadresse Vorname und Nachname` in der E-Mail dann durch den Vor- und Nachnamen deines Kontakts aus der Lieferadresse ausgegeben.
+Mit dem Header, dem Footer und den Einstellungen in der Vorlage wie Name, Betreff etc. erstellst du sozusagen das Gerüst deiner E-Mail. Den Inhalt der Vorlage bildest du mit den <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>>. Die Variablen werden dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt. Zum Beispiel wird die Variable `Lieferadresse Vorname und Nachname` in der E-Mail dann durch den Vor- und Nachnamen deines Kontakts aus der Lieferadresse ausgegeben.
 
 Dieses Video bietet dir eine Einführung in das Thema:
 
@@ -428,7 +428,7 @@ Die Liste enthält alle <<#footer-erstellen, Footer>>, die du bereits erstellt h
 
 |====
 
-Gestalte nun den Inhalt deiner E-Mail, indem du über die Widgets Variablen einfügst. Wie du dazu vorgehst, ist im folgenden Kapitel xref:crm:widget-einfuegen.adoc#[Widget in Vorlage einfügen] beschrieben.
+Gestalte nun den Inhalt deiner E-Mail, indem du über die Widgets Variablen einfügst. Wie du dazu vorgehst, ist im folgenden Kapitel <<#widget-einfuegen, Widget in Vorlage einfügen>> beschrieben.
 
 In diesem Video zeigen wir dir, wie du eine Vorlage mit Widgets erstellst:
 
