add icon and links

--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -34,7 +34,7 @@ Einstellungen für Picklisten vornehmen:
 . Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links.
 . Tippe unten auf *Einstellungen* (icon:settings[set=material]). +
 → Das Einstellungsmenü öffnet sich.
-. Tippe auf *Picklisten* (image:warenwirtschaft:icon_pick_list.png[width=14, height=14]).
+. Tippe auf *Picklisten* (image:warenwirtschaft:icon_pick-lists.png[width=14, height=14]).
 . Nimm die Einstellungen für Picklisten vor. Beachte dazu die Erläuterungen in <<table-pw-pick-lists-settings>>.
 
 
