OTTO Market - Media Assets - DE

--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -492,8 +492,34 @@ _oder_
 
 Die Verkaufspreiseinheit entspricht der Einheit der Varianteneinstellung *Inhalt*. OTTO Market erwartet den ISO-Code der Einheit.
 
-|
-|
+| Media assets +
+(*Bild*; +
+*Alle verfügbaren Bilder*; +
+*Maßzeichnung*; +
+*Farbvarianten*; +
+*Energieeffizienzlabel*; +
+*Materialprobe*; +
+*Produktdatenblatt*; +
+*Benutzerhandbuch*; +
+*Herstellergarantie* +
+usw.)
+| Für Media-Asset-Datenfelder können nur Dateien als URL-Links zugeordnet werden.
+
+*_Empfohlene Zuordnungen:_*
+
+ * *Bild » Varianten Bilder » Einzelbild*
+  ** *Bildinformation:* *Vollbild-URL* wählen
+  ** *Bildposition:* Position des Bilds wählen
+  ** *Auftragsherkunft:* *{market}* wählen
+  ** *Listing:* Keine Option wählen
+  ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
+
+_oder_
+
+* Eigenschaft des Typs *Zeichenkette*, in der die URL zur Datei gespeichert wird.
+
+*_Hintergrund:_* Ob du Bilder oder Eigenschaften zuordnest hängt davon ab, ob du für deine Bilder konsequent die Positionen nutzt. Wenn zum Beispiel alle deine Produktdatenblätter die Postion 200 haben, kannst du das plentymarkets Datenfeld *Bild » Varianten Bilder » Einzelbild* zuordnen und die Position 200 wählen.
+
 !===
 
 |====
