add introduction and instructions

--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -6,21 +6,11 @@
 include::partial$hinweis-offene-beta.adoc[]
 include:partial$hinweis-voraussetzungen.adoc[]
 
+Die Pickliste ist eins der wichtigsten Dokumente für dein Lagerpersonal, denn sie enthält alle Informationen darüber, welche Artikel von welchen Lagerorten geholt werden müssen, um einen Auftrag abzuwickeln.
 
-//TODO: Einleitung
+Mit plentyWarehouse kann das Lagerpersonal Picklisten, die xref:auftraege:pickliste.adoc#300[in deinem plentymarkets System erstellt] wurden, bequem auf mobilen Geräten suchen, öffnen und bearbeiten.
 
 [#100]
-== Wie werden Picklisten abgearbeitet?
-
-Klappe die Box unten auf, um mehr darüber zu erfahren, wie du Picklisten abarbeitest.
-
-[.collapseBox]
-.Ablauf beim Abarbeiten von Picklisten
---
-//TODO: Erklärung zum Ablauf
---
-
-[#200]
 == Einstellungen für Picklisten vornehmen
 
 Die Funktion zur Arbeit mit mobilen Picklisten in plentyWarehouse lässt sich mithilfe einiger grundlegenden Einstellungen auf deine Bedürfnisse und Arbeitsabläufe anpassen.
@@ -47,11 +37,12 @@ Einstellungen für Picklisten vornehmen:
 2+| Bereich *Allgemeine Einstellungen*
 
 | *Picklistensortierung*
-|
+|In welcher Reihenfolge sollen Picklisten angezeigt werden, wenn du die Funktion in plentyWarehouse öffnest? Wähle eine der beiden folgenden Optionen. +
+*Datum aufsteigend* = Picklisten werden aufsteigend nach ihrem Erstellungsdatum sortiert. Somit beginnt die Liste mit der ältesten Pickliste. +
+*Datum absteigend* = Picklisten werden absteigend nach ihrem Erstellungsdatum sortiert. Somit beginnt die Liste mit der neuesten Pickliste.
 
 | [#option-trolleytag]*Eingabe einer Wagenkennung ermöglichen*
-|Aktiviere diese Option, um beim Öffnen einer Pickliste die Option zur Eingabe einer Wagenkennung anzubieten. Diese Zuordnung macht Sinn, wenn du einen bestimmten Kommissionierwagen als Behälter für die Artikel der Pickliste verwenden möchtest.
-
+|Aktiviere diese Option, um beim Öffnen einer Pickliste die Option zur Eingabe einer Wagenkennung anzubieten. Diese Zuordnung macht Sinn, wenn du einen bestimmten Kommissionierwagen als Behälter für die Artikel der Pickliste verwenden möchtest. Stelle sicher, dass du die gleiche Kennung auch am Kommissionierwagen angebracht hast, sodass der Wagen und die Pickliste korrekt zugeordnet werden.
 
 2+| Bereich *Artikelerfassung*
 
@@ -67,7 +58,7 @@ Einstellungen für Picklisten vornehmen:
 
 |====
 
-[250]
+[200]
 == Rechte für Picklisten vergeben
 
 Bevor Picklisten mit plentyWarehouse abgearbeitet werden, muss sichergestellt sein, dass alle Benutzer:innen über die entsprechenden Berechtigungen verfügen. Nur so können die Artikel korrekt gepickt werden und die Picklisten korrekt abgeschlossen werden.
@@ -82,34 +73,37 @@ include::_includes:page$rechte.adoc[]
 [#300]
 == Artikel picken
 
-//TODO: Gehe nun wie unten beschrieben vor, um Artikel mit plentyWarehouse zu verräumen.
+Nachdem du die vorbereitenden Einstellungen für Picklisten vorgenommen und die notwendigen Rechte vergeben hast, kannst du mit dem eigentlichen Picken der Artikel beginnen.
 
+Stelle zuerst sicher, dass alle benötigten Picklisten bereits im Menü *Aufträge » Fulfillment* im Backend deines plentymarkets Systems erzeugt wurden. Weitere Informationen dazu findest du bei Bedarf auf der Handbuchseite xref:auftraege:pickliste.adoc#[Picklisten]. 
 
+Die so erstellten Picklisten werden automatisch mit plentyWarehouse synchronisiert. Das heißt, dass die Picklisten in der App gesucht und aufgerufen werden können.
 
-////
-[#400]
-=== Quelllagerort auswählen
+[#310]
+=== Pickliste öffnen
 
-Wähle zuerst den Lagerort aus, dessen Artikel verräumt werden sollen.
+Zuerst öffnest du die Pickliste, die du abarbeiten möchtest. Gehe dazu wie unten beschrieben vor.
 
-[.instruction]
-Quelllagerort auswählen:
+[instruction]
+Pickliste öffnen:
 
-. <<warenwirtschaft/plentywarehouse/installation-und-ersteinrichtung#300, Logge dich in plentyWarehouse ein>>.
+. xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
 . Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links. +
-icon:map-signs[] *_Oder:_*: Finde die Kachel zum *Verräumen* im Bereich *Funktionen* auf dem Dashboard.
-. Tippe auf *Verräumen* (image:warenwirtschaft/plentywarehouse/assets/icon_reshelving.png[width=14, height=14]).
-. Suche nach dem Lagerort, der verräumt werden soll. Gib dazu den Namen des Lagerorts ein oder scanne den Barcode des Lagerort-Labels. +
-*_Optional:_* Tippe auf (icon:chevron-down[role="darkGrey"]), um die Suchergebnisse zusätzlich nach dem *Zweck* des Lagerorts zu filtern.
-. Tippe auf *Suchen* (icon:search[role="darkGrey"]). +
-→ Die gefundenen Lagerorte werden angezeigt.
+icon:map-signs[] *_Oder:_*: Finde die Kachel zu *Picklisten* im Bereich *Funktionen* auf dem Dashboard.
+. Tippe auf *Picklisten* (image:warenwirtschaft:icon_pick-lists.png[width=14, height=14]).
+→ Es werden automatisch alle verfügbaren Picklisten angezeigt.
+. Tippe oben rechts auf icon:filter_list[set=material], um die Picklisten nach ihrem Status zu filtern. Dabei kannst du auswählen, ob du nach Picklisten filtern möchtest, die *offen*, *in Bearbeitung* oder *abgeschlossen* sind.
+. Tippe auf *Suchen* (icon:search[role="darkGrey"]).
+→ Die gefilterten Suchergebnisse werden angezeigt.
+. Tippe auf einen Eintrag in der Liste, um die entsprechende Pickliste zu öffnen. +
+*_Hinweis:_* Picklisten mit dem Status *abgeschlossen* können nicht erneut geöffnet werden. Möchtest du eine Pickliste öffnen, die *in Bearbeitung* ist, wirst du gefragt, ob du die Arbeit an der Pickliste fortsetzen oder von vorn beginnen möchtest. +
+→ Die Pickliste wird geöffnet.
+
+[#320]
+=== Artikel picken
 
 
-Mit der Artikelliste arbeiten:
 
-. Schaue auf die Liste, um herauszufinden, welche Artikel verräumt werden müssen.
-. Entscheide, welchen Artikel du als erstes verräumen möchtest.
-. Scanne den Barcode des Artikels oder tippe in der App auf den Artikel.
 
-////
+
 
