--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -492,34 +492,26 @@ _oder_
 
 Die Verkaufspreiseinheit entspricht der Einheit der Varianteneinstellung *Inhalt*. OTTO Market erwartet den ISO-Code der Einheit.
 
-| Media assets +
-(*Bild*; +
-*Alle verfügbaren Bilder*; +
-*Maßzeichnung*; +
+2+^| Media Assets
+
+| *Bild*
+| *_Empfehlung:_* Ordne das plentymarkets Datenfeld *Bild » item/catalogs/variation/image.image-image* zu.
+Mit diesem Datenfeld werden alle Bilder exportiert, die für die Herkunft *OTTO Market* freigegeben sind.
+
+| Weitere Media-Asset-Datenfelder +
+(*Maßzeichnung*; +
 *Farbvarianten*; +
 *Energieeffizienzlabel*; +
 *Materialprobe*; +
 *Produktdatenblatt*; +
-*Benutzerhandbuch*; +
-*Herstellergarantie* +
+*Benutzerhandbuch* +
 usw.)
-| Für Media-Asset-Datenfelder können nur Dateien als URL-Links zugeordnet werden.
+| Für alle Media-Asset-Datenfelder außer *Bilder* können nur URLs zu Dateien exportiert werden.
 
-*_Empfohlene Zuordnungen:_*
+*_Empfohlene Zuordnung:_*
 
- * *Bild » Varianten Bilder » Einzelbild*
-  ** *Bildinformation:* *Vollbild-URL* wählen
-  ** *Bildposition:* Position des Bilds wählen
-  ** *Auftragsherkunft:* *{market}* wählen
-  ** *Listing:* Keine Option wählen
-  ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
-
-_oder_
-
-* Eigenschaft des Typs *Zeichenkette*, in der die URL zur Datei gespeichert wird.
-
-*_Hintergrund:_* Ob du Bilder oder Eigenschaften zuordnest hängt davon ab, ob du für deine Bilder konsequent die Positionen nutzt. Wenn zum Beispiel alle deine Produktdatenblätter die Postion 200 haben, kannst du das plentymarkets Datenfeld *Bild » Varianten Bilder » Einzelbild* zuordnen und die Position 200 wählen.
-
+* Eigenschaften des Typs *Zeichenkette*, in denen die URL zu den Dateien gespeichert wird. +
+*_Wichtig:_* Eigenschaften des Typs *Datei* können nicht verwendet werden, weil OTTO Markt nur URL verwenden kann. Jede Eigenschaft darf nur eine URL enthalten.
 !===
 
 |====
