--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -492,8 +492,26 @@ _oder_
 
 Die Verkaufspreiseinheit entspricht der Einheit der Varianteneinstellung *Inhalt*. OTTO Market erwartet den ISO-Code der Einheit.
 
-|
-|
+2+^| Media Assets
+
+| *Bild*
+| *_Empfehlung:_* Ordne das plentymarkets Datenfeld *Bild » item/catalogs/variation/image.image-image* zu.
+Mit diesem Datenfeld werden alle Bilder exportiert, die für die Herkunft *OTTO Market* freigegeben sind.
+
+| Weitere Media-Asset-Datenfelder +
+(*Maßzeichnung*; +
+*Farbvarianten*; +
+*Energieeffizienzlabel*; +
+*Materialprobe*; +
+*Produktdatenblatt*; +
+*Benutzerhandbuch* +
+usw.)
+| Für alle Media-Asset-Datenfelder außer *Bilder* können nur URLs zu Dateien exportiert werden.
+
+*_Empfohlene Zuordnung:_*
+
+* Eigenschaften des Typs *Zeichenkette*, in denen die URL zu den Dateien gespeichert wird. +
+*_Wichtig:_* Eigenschaften des Typs *Datei* können nicht verwendet werden, weil OTTO Markt nur URL verwenden kann. Jede Eigenschaft darf nur eine URL enthalten.
 !===
 
 |====
