--- a/docs/en-gb/modules/markets/partials/catalogue-new-to-text.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-new-to-text.adoc
@@ -1,5 +1,5 @@
 [.collapseBox]
-.What’s a catalogue?
+.What is a catalogue?
 --
 Catalogues are used to export data from your plentymarkets system. For example, catalogues can be used to export item data to a marketplace. There are catalogues with standard formats and catalogues with marketplace formats. +
 Standard formats are used to export data from your plentymarkets system into a file. +
@@ -8,4 +8,3 @@ Marketplace formats are used to export item data to markets.
 
 * Is this your first time working with catalogues? Then read up on the xref:en:managing-catalogues.adoc[basic concept of the plentymarkets catalogues first].
 * Check out the manual page for the standard format xref:data:catalogues-item.adoc#[Item (new)] for more information about the plentymarkets data fields that you can map in this catalogue.
-
