etsy stock update intervals - DE+EN

--- a/docs/de-de/modules/maerkte/pages/etsy.adoc
+++ b/docs/de-de/modules/maerkte/pages/etsy.adoc
@@ -28,7 +28,7 @@ Nachdem du Etsy in plentymarkets eingerichtet hast, findet der Datenaustausch in
 | einmal täglich
 
 | Bestandsabgleich
-| stündlich +
+| einmal täglich +
 *_Hinweis:_* Es wird ein maximaler Bestand von 999 exportiert.
 
 | Preisabgleich
