--- a/docs/en-gb/modules/markets/pages/etsy.adoc
+++ b/docs/en-gb/modules/markets/pages/etsy.adoc
@@ -28,7 +28,7 @@ After you have set up Etsy in plentymarkets, data is exchanged with the market i
 | once a day
 
 | Stock synchronisation
-| Hourly +
+| once a day +
 *_Note:_* A maximum stock of 999 is exported.
 
 | Price synchronisation
